# dispenser

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.sample.toml  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: ci.yml  docker.yaml  release.yml  rust.yml
nix/: module.nix  overlay.nix  package.nix
src/: config.rs  dns.rs  main.rs  rcon.rs  ssh.rs
src/cloud/: digitalocean.rs  mod.rs  ssh.rs  vultr.rs
