[package]
name = "dispenser"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[dependencies]
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
thiserror = "1.0.61"
reqwest = { version = "0.12.4", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "signal"] }
camino = "1.1.7"
petname = "2.0.2"
thrussh = "0.34.1" # 0.35.1 broke password auth?
thrussh-keys = "0.22.1"
futures-util = "0.3.30"
pretty_env_logger = "0.5.0"
cron = "0.12.1"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.7", features = ["derive"] }
main_error = "0.1.2"
secretfile = "0.1.0"

[profile.release]
lto = true
